[tool.poetry]
name = "provind"
version = "0.1.0"
description = ""
authors = ["Alejandro Alvarez <eliluminado2010@gmail.com>"]
maintainers = []
license = "MPL-2.0"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
packages = [
    { include = "ROADMAP.md" },
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Jinja2 = "^2.11.2"
reportlab = "^3.5.55"
falcon = "^2.0.0"
Pillow = "^8.0.1"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
tox = "^3.20.1"
isort = "^5.6.4"
mypy = "^0.790"
pytest-html = "^3.0.0"
pydocstyle = "^5.1.1"
tox-ini-fmt = "^0.5.0"
pre-commit = "^2.9.2"

[tool.black]
line-length = 120

[tool.pylint]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
